--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
             "required": false
         },
         "TITLE": {
-            "description": "OPtitle"
+            "description": "OPtitle",
             "required": false
         },
         "APP_SECRET": {
@@ -15,7 +15,7 @@
         },
         "ORDERED_ENV": {
             "description": "control the order env variables are prompted",
-            "order": 100
+            "order": 100,
             "required": false
         }
     },
