--- a/app.json
+++ b/app.json
@@ -8,6 +8,7 @@
         },
         "TITLE": {
             "description": "OPtitle",
+            "value": "Oprun",
             "required": false
         },
         "APP_SECRET": {
@@ -16,6 +17,7 @@
         "ORDERED_ENV": {
             "description": "control the order env variables are prompted",
             "order": 100,
+            "value": "1",
             "required": false
         }
     },
