--- a/app.json
+++ b/app.json
@@ -22,7 +22,7 @@
         }
     },
     "options": {
-        "allow-unauthenticated": false,
+        "allow-unauthenticated": true,
         "memory": "512Mi",
         "cpu": "1",
         "port": 80,
